# ShotClock-AI

./: .gitignore  Dockerfile  README.md  analyzer.py  app.py  batch_analyze.py  batch_analyze_v2.py  docker-compose.yml  generate_test_audio.py  generate_test_audio_v2.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: nginx.conf.example
examples/: sample_config.yaml
src/rof_detector/: cli.py
src/rof_detector/audio/: detect.py  features.py  preprocess.py
src/rof_detector/fusion/: fuse.py
src/rof_detector/io/: ffmpeg.py
src/rof_detector/metrics/: bursts.py  rof.py
src/rof_detector/vision/: flash_detect.py  roi.py
src/rof_detector/viz/: annotate_video.py  exports.py  plots.py
tests/: test_bursts.py  test_rof_math.py
ui/: streamlit_app.py
