[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rof-from-video"
version = "0.2.0"
description = "Estimate rate of fire from video using audio-first shot detection with optional muzzle flash confirmation."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Your Name"}]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "matplotlib>=3.7",
  "typer>=0.12",
]

[project.optional-dependencies]
video = ["opencv-python>=4.8"]
ui = ["streamlit>=1.27", "pandas>=2.1"]
dev = ["pytest>=7.4", "ruff>=0.5"]

[project.scripts]
rof = "rof_detector.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
